[package]
name = "rust_iso639"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

keywords=["ISO639", "ISO15924","bcp47", "RFC5646"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phf = { version = "^0.11.1", features = ["macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
prettytable-rs = "^0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "^0.2.83"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "^0.3.33"
